# bonus_calculator

./: .env  Dockerfile  Makefile  __init__.py  app.py  docker-compose.yml  entrypoint.sh  pyproject.toml
bonus/calculator/: __init__.py  calculator_1.py  calculator_2.py  definitions.py  factories.py  fixtures.py  models_1.py  models_2.py  models_3.py  models_bonus.py
bonus/calculator/tests/: test_calculator.py
bonus/settings/: __init__.py  db.py
